# EHB354E-Project

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
doc/: report.tex
include/: Button.h  Input.h  Layer.h  Network.h  NetworkVisualizer.h  Neuron.h
src/: Button.cpp  Input.cpp  Layer.cpp  Network.cpp  NetworkVisualizer.cpp  Neuron.cpp  main.cpp
